2002-04-16  Joerg-Cyril Hoehle  <Joerg-Cyril.Hoehle@t-systems.com>

	* foreign.d (convert_from_foreign): fix c-array uint8/16/32 return
	broken since CVS 1999-09-13

2002-04-16  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (parse-c-function): check :OUT & :IN-OUT args for
	being pointers, just like in FOREIGN-CALL-OUT in foreign.d

2002-04-16  Joerg-Cyril Hoehle  <Joerg-Cyril.Hoehle@t-systems.com>
	    Sam Steingold  <sds@gnu.org>

	* io.d (pr_orecord): print invalid FOREIGN-VARIABLEs and
	FOREIGN-FUNCTIONs with INVALID prefix and address with offset

2002-04-16  Sam Steingold  <sds@gnu.org>

	error reporting unification
	* record.d (fehler_key_odd): new function
	(check_keywords): new macro
	(%ALLOCATE_INSTANCE, %SHARED-INITIALIZE, %REINITIALIZE-INSTANCE)
	(%INITIALIZE-INSTANCE, %MAKE-INSTANCE): use them
	* constsym.d: define SHARED-INITIALIZE, REINITIALIZE-INSTANCE,
	INITIALIZE-INSTANCE, MAKE-INSTANCE here for error reporting
	* subr.d, constsym.d: %* should be named p*, not *

2002-04-16  Stefan Kain  <stefan.kain@freenet.de>

	* clos.lisp, record.d: translated all comments

2002-04-12  Peter Burwood  <clisp@peterb.org.uk>

	* stream.d (finish_tty_output) [UNIX_CYGWIN32]: ignore EBADF from
	fsync, just like in force_tty_output()

2002-04-12  Sam Steingold  <sds@gnu.org>

	*BROWSERS* and *BROWSER* are in CUSTOM, as advertised
	* init.lisp (*browser*, *browsers*): export from CUSTOM
	* clhs.lisp (*browser*, *browsers*): docstrings
	(*browsers*): xterm is UNIX-only
	* cfgamiga.lisp, cfgdos.lisp, cfgsunux.lisp, cfgunix.lisp:
	* cfgwin32.lisp, cfgacorn.lisp: suggest customizing *BROWSER*

2002-04-12  Sam Steingold  <sds@gnu.org>

	* time.d (DELTA4): work with up to 64-bit return values
	* lispbibl.d, intelem.d (UL2_to_I): define always

2002-04-11  Peter Burwood  <clisp@peterb.org.uk>

	* errunix.d (get_errormsg): prevent EILSEQ shadowing ENOENT

2002-04-10  Sam Steingold  <sds@gnu.org>

	new built-in DELTA4 for metering.lisp optimization